@@ -1,3 +1,9 @@
+2002-10-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tclInt.h: Removed definitions of obsolete HistoryEvent
+	and HistoryRev structures (the history mechanism has been written
+	in Tcl for some time now.)
+
 2002-10-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.4.1 TAGGED FOR RELEASE ***
